namespace NsEcsFrame.Core {
	/// <summary>
	/// 组件接口，所有组件都应实现此接口
	/// </summary>
	public interface IComponent {
	}
}
